# azure-c-shared-utility

./: CMakeLists.txt  README.md
adapters/: condition_c11.c  condition_pthreads.c  condition_win32.c  httpapi_curl.c  httpapi_winhttp.c  lock_pthreads.c  socketio_berkeley.c  threadapi_c11.c  threadapi_pthreads.c  threadapi_rtx_mbed.cpp  threadapi_win32.c
devdoc/: threadapi_requirements.md  tlsio_cyclonessl_requirements.md  tlsio_cyclonessl_socket_bsd_requirements.md  tlsio_cyclonessl_socket_requirements.md
inc/azure_c_shared_utility/: refcount.h  threadapi.h  tlsio_cyclonessl.h  tlsio_cyclonessl_socket.h  tlsio_openssl.h  wsio.h
samples/: CMakeLists.txt
samples/wsio_connect/: CMakeLists.txt  main.c
src/: tlsio_cyclonessl.c  tlsio_cyclonessl_socket.c  tlsio_cyclonessl_socket_bsd.c  tlsio_openssl.c  tlsio_schannel.c  tlsio_wolfssl.c  wsio.c
tests/: CMakeLists.txt
tests/condition_unittests/: condition_unittests.c
tests/tlsio_cyclonessl_socket_bsd_ut/: CMakeLists.txt  main.c  socket_mocks.c  tlsio_cyclonessl_socket_bsd_ut.c
tests/tlsio_cyclonessl_socket_win32_ut/: CMakeLists.txt  main.c
tests/tlsio_cyclonessl_ut/: CMakeLists.txt  tlsio_cyclonessl_ut.c
tests/tlsio_cyclonessl_win32_ut/: CMakeLists.txt
testtools/umock_c/inc/: umock_c.h  umock_c_internal.h  umockalloc.h
